--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,6 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
     <div id="root">
     </div>
     <!--
@@ -38,4 +35,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="src/index.js"></script>
 </html>
